<resources>
    <string name="app_name">My_PepperRecipeApplication</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Confirm_Password">Confirm_Password</string>


</resources>